# coffee-store-control

./: .gitignore  Makefile  PERMISSIONS.md  README.md  TASKS.md  docker-compose.yml  git_time.py
backend/: .env.example  RESOURCE_PERMISSIONS_GUIDE.md  alembic.ini  coffee-store-api.service  migrate_invoice_costs.py  pyproject.toml  seed_core_roles.py  test_config.py
backend/alembic/: env.py
backend/alembic/versions/: 1b878a6d9d3e_rename_permissions_to_plural_form.py  20251102_add_payment_terms_days_to_suppliers.py  20251102_add_tax_id_to_suppliers.py  217b46cbce4a_add_refresh_token_to_users.py  33d996835ae6_add_business_id_and_description_to_units.py  47576662dbb8_assign_permissions_to_roles.py  571bb0dd6392_remove_month_period_id_from_expense_.py  6c9f704f14f8_add_created_by_to_expense_sections_and_.py  70c8ec2c9f53_add_created_by_to_suppliers.py  7624bf70ffc5_add_ofd_integration_tables.py  7858f574a298_add_roles_table_and_user_role_.py  841261b889ce_add_business_and_user_business_tables.py  8728a3df9016_add_tech_card_permissions.py  941e69f0d13c_add_supplier_permissions.py  a0d42252cae5_reset_and_seed_new_permissions.py  b8bd5e24ff91_add_cascade_delete_to_unit_base_unit_id_.py  b8e3267f7084_add_expense_tracking_tables_units_.py  c7d350ee55a8_remove_category_id_from_tech_card_items.py  cf66b33dcf4f_seed_roles_and_permissions_data.py  cf9fa2be56da_add_permissions_and_access_control_.py  d3f03f6cea74_assign_supplier_permissions_to_roles.py  d8d22509ee76_add_ofd_integration_permissions.py  (+3 more)
backend/app/: core_models.py  deps.py  main.py
backend/scripts/: generate_encryption_key.py  migrate_invoice_costs.py
backend/tests/: __init__.py  conftest.py
web/: index.html  (+6 more)
(+187 files in other folders)
